# Messenger-

./: build.gradle.kts  gradle.properties  gradlew  key_base64.txt.  local.properties  pacman.js  settings.gradle.kts  setup_project_files.sh
.github/workflows/: android-ci.yml  main.yml
app/: build.gradle.kts  google-services (1).json  local.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/pacman/: index.html
app/src/main/assets/vpn/: servers.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dchat/core/network/: DhtNetworkManager.kt
app/src/main/java/com/dchat/core/security/: CryptoEngine.kt
app/src/main/java/com/dchat/data/local/: EncryptedDatabase.kt
app/src/main/java/com/dchat/domain/: ContactDiscoveryService.kt
app/src/main/java/com/dchat/ui/contacts/: ContactsViewModel.kt
app/src/main/java/com/kakdela/p2p/: App.kt  MainActivity.kt  MyApplication.kt
app/src/main/java/com/kakdela/p2p/ai/: AiCore.kt  AiMemoryStore.kt  LlamaBridge.kt  ModelDownloadManager.kt  NativeAi.kt  RagEngine.kt  WebSearcher.kt
app/src/main/java/com/kakdela/p2p/api/: Models.kt  MyServerApi.kt  WebViewApiClient.kt  WebkitCookieJar.kt
app/src/main/java/com/kakdela/p2p/auth/: AuthManager.kt  SmsCodeManager.kt  SmsCodeStore.kt  SmsReceiver.kt
app/src/main/java/com/kakdela/p2p/chat/: SmsChatManager.kt
app/src/main/java/com/kakdela/p2p/data/: AppContact.kt  AudioRepository.kt  AuthManager.kt  Chat.kt  ChatRepository.kt  Contact.kt  ContactManager.kt  ContactModel.kt  ContactP2PManager.kt  ContactSync.kt  ContactSyncManager.kt  FileTransferWorker.kt  IdentityRepository.kt  Message.kt  MessageRepository.kt  P2PSmsReceiver.kt  PeerSyncRepository.kt  UserManager.kt  WebRtcClient.kt  WebRtcManager.kt
app/src/main/java/com/kakdela/p2p/data/local/: ChatDatabase.kt  MessageDao.kt  MessageEntity.kt  NodeDao.kt  NodeEntity.kt
app/src/main/java/com/kakdela/p2p/game/: JewelsBlastActivity.kt
app/src/main/java/com/kakdela/p2p/model/: AudioTrack.kt  ChatMessage.kt
app/src/main/java/com/kakdela/p2p/network/: CookieStore.kt  NetworkEvents.kt
app/src/main/java/com/kakdela/p2p/security/: CryptoManager.kt
app/src/main/java/com/kakdela/p2p/service/: MusicPlaybackService.kt  P2PService.kt
app/src/main/java/com/kakdela/p2p/termux/: TermuxInstaller.java
app/src/main/java/com/kakdela/p2p/ui/: CalculatorScreen.kt  ChatDisplay.kt  ChatScreen.kt  ChatViewModel.kt  ChatsListScreen.kt  ChatsListViewModel.kt  ChessScreen.kt  ContactsScreen.kt  DealsScreen.kt  EntertainmentScreen.kt  JewelsBlastScreen.kt  MessageItem.kt  NewChatScreen.kt  PacmanScreen.kt  PhoneAuthScreen.kt  SettingsScreen.kt  SplashScreen.kt  Sudoku screen.kt  SudokuScreen.kt  TextEditorScreen.kt  TicTacToeScreen.kt  WebViewScreen.kt
app/src/main/java/com/kakdela/p2p/ui/auth/: EmailAuthScreen.kt  PhoneAuthScreen.kt  RegistrationChoiceScreen.kt
app/src/main/java/com/kakdela/p2p/ui/call/: CallActivity.kt  CallUI.kt
app/src/main/java/com/kakdela/p2p/ui/chat/: AiChatScreen.kt  AiChatViewModel.kt
app/src/main/java/com/kakdela/p2p/ui/navigation/: NavGraph.kt  Routes.kt
app/src/main/java/com/kakdela/p2p/ui/onboarding/: OnboardingScreen.kt
app/src/main/java/com/kakdela/p2p/ui/player/: MiniPlayer.kt  MusicManager.kt  MusicPlayerScreen.kt  PlayerViewModel.kt  VideoPlayerActivity.kt
app/src/main/java/com/kakdela/p2p/ui/screens/: FileManagerScreen.kt
app/src/main/java/com/kakdela/p2p/ui/slots/: slots1  slots1.kt
app/src/main/java/com/kakdela/p2p/ui/theme/: Shapes.kt  Theme.kt  Typography.kt
app/src/main/java/com/kakdela/p2p/utils/: ContactUtils.kt  PermissionUtils.kt  rememberContactsPermissionLauncher.kt
app/src/main/java/com/kakdela/p2p/viewmodel/: AiChatViewModel.kt  ChatViewModelFactory.kt  FileManagerViewModel.kt
app/src/main/java/com/kakdela/p2p/vpn/: VpnActions.kt  VpnGateApi.kt  VpnManager.kt  VpnSelector.kt
app/src/main/java/com/kakdela/p2p/vpn/core/: KillSwitchFirewall.kt  NetworkMonitor.kt  VpnBackend.kt  WarpRegistrar.kt  WgKeyStore.kt
app/src/main/java/com/kakdela/p2p/vpn/data/: ServerRepository.kt
app/src/main/java/com/kakdela/p2p/vpn/model/: VpnServer.kt
app/src/main/java/com/kakdela/p2p/vpn/notification/: VpnNotification.kt
app/src/main/java/com/kakdela/p2p/vpn/receiver/: BootReceiver.kt
app/src/main/java/com/kakdela/p2p/vpn/service/: AutoRestartWorker.kt  KakdelaVpnService.kt  VpnBootReceiver.kt  VpnService.kt  WarpVpnService.kt
app/src/main/java/com/kakdela/p2p/workers/: ScheduleMessage.kt  ScheduledMessageWorker.kt
app/src/main/java/com/mystery_of_orient_express/: MysteryOfOrientExpress.java
app/src/main/java/com/mystery_of_orient_express/match3_engine/controller/: DisappearAnimati  DisappearAnimation.java  FallAnimation.ja  GameInputProcessor.java  IAnimationHandler.  SwapAnimation.java
app/src/main/java/com/mystery_of_orient_express/match3_engine/model/: CellObject.java  Field.java  GameObject.
app/src/main/java/com/mystery_of_orient_express/match3_engine/view/: GameFieldControl.java  GameScreen.java  ScoreControl.java  SplashScreen.java
app/src/main/java/com/termux/: R.java
app/src/main/java/com/termux/app/: RunCommandService.java  TermuxActivity.java  TermuxApplication.java  TermuxInstaller.java  TermuxService.java
app/src/main/java/com/termux/app/activities/: SettingsActivity.java
app/src/main/java/com/termux/app/terminal/: TermuxSessionsListViewController.java  TermuxTerminalSessionActivityClient.java  TermuxTerminalViewClient.java
app/src/main/java/com/termux/filepicker/: TermuxDocumentsProvider.java
app/src/main/res/layout/: activity_video_player.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  strings_termux.xml  styles.xml  themes.xml
github/workflows/: main.yml
gradle/: libs.versions.toml
terminal-view/src/main/res/values/: strings.xml
termux-shared/: build.gradle
termux-shared/src/main/java/com/termux/shared/termux/: TermuxConstants.java
(+16 files in other folders)
